@@ -1107,10 +1107,6 @@ $wgGroupPermissions['user' ]['purge']            = true; // can use ?action=purg
 // Implicit group for accounts that pass $wgAutoConfirmAge
 $wgGroupPermissions['autoconfirmed']['autoconfirmed'] = true;
 
-// Implicit group for accounts with confirmed email addresses
-// This has little use when email address confirmation is off
-$wgGroupPermissions['emailconfirmed']['emailconfirmed'] = true;
-
 // Users with bot privilege can have their edits hidden
 // from various log pages by default
 $wgGroupPermissions['bot'  ]['bot']              = true;
@@ -1261,7 +1257,6 @@ $wgAutopromote = array(
 		array( APCOND_EDITCOUNT, &$wgAutoConfirmCount ),
 		array( APCOND_AGE, &$wgAutoConfirmAge ),
 	),
-	'emailconfirmed' => APCOND_EMAILCONFIRMED,
 );
 
 /**
